# polyglot-repo-example

./: .bazelrc  .gitignore  AGENTS.md  BUILD  MODULE.bazel  README.md  WORKSPACE  docker-nix.sh  main.cc  podman-nix.sh  rebuild.sh  shell.nix
cpp/: BUILD.bazel  echo_client.cc  echo_server.cc
golang/: BUILD  BUILD.bazel  echo_client.go
java/: BUILD.bazel  EchoClient.java  EchoServer.java
proto/: BUILD  BUILD.bazel  echo.proto  example.proto
python/: BUILD.bazel
