module(
    name = "starter_kit",
    version = "1.0",
)

# Protobuf and gRPC
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "grpc", version = "1.73.1")

# rules_proto_grpc 5.x modules for language-specific proto/gRPC rules
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.1")

# Java - Maven dependencies for gRPC runtime
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "grpc-java", version = "1.66.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-javalite:3.21.12",
        "io.grpc:grpc-netty-shaded:1.66.0",
        "io.grpc:grpc-protobuf:1.66.0",
        "io.grpc:grpc-stub:1.66.0",
        "io.grpc:grpc-core:1.66.0",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(maven, "maven")

# Go
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:zWnc1Vrcno+lHZCOofnIMvycFcc0QRGIzm9dhnDX68E=",
    version = "v1.67.1",
)
use_repo(go_deps, "org_golang_google_grpc")

# Python
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    ignore_root_user_error = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python3_deps",
    python_version = "3.11",
    requirements_lock = "//external/python:requirements.txt",
)
use_repo(pip, "python3_deps")
