java_binary(
    name = "echo_client",
    srcs = [
        "EchoClient.java",
    ],
    main_class = "com.example.EchoClient",
    deps = [
        "//proto:echo_java_grpc",
    ],
)

java_binary(
    name = "echo_server",
    srcs = [
        "EchoServer.java",
    ],
    main_class = "com.example.EchoServer",
    deps = [
        "//proto:echo_java_grpc",
    ],
)
