load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
)

cc_proto_library(
    name = "echo_cc_proto",
    deps = [":echo_proto"],
)

cpp_grpc_library(
    name = "echo_cc_grpc",
    protos = [":echo_proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "echo_go_grpc",
    importpath = "echo",
    visibility = ["//visibility:public"],
    protos = [":echo_proto"],
)

java_grpc_library(
    name = "echo_java_grpc",
    visibility = ["//visibility:public"],
    protos = [":echo_proto"],
)
